--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<h1>https://ft-riddle.github.io/jogo-web/</h1>",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,9 +19,7 @@
   },
   "homepage": "https://github.com/FT-riddle/jogo-web#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "socket.io": "^4.0.0"
+    "express": "^4.17.1"
   }
 }
   
