--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   ],
   "license": "MIT",
   "main": "servidor.js",
+  "name": "ft-riddle",
   "repository": {
       "type": "git",
       "url": "git+https://github.com/FT-riddle/jogo-web.git"
   },
   "scripts": {
-      "start": "node servidor.js",
+      "start": "node index.js",
       "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "0.1.0"
